Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-17815

Mutation operations are counted twice when the system has to go to disk

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      In full eviction mode a add operation is counted twice:

      Here is the output of cbstats:

       bytes_written:                      3263486
       cas_badval:                         0
       cas_hits:                           0
       cas_misses:                         0
       cmd_flush:                          0
       cmd_get:                            0
       cmd_set:                            2
       conn_yields:                        0
      

      Here is the code to reproduce the problem

      #!/usr/bin/env python2.7
      # -*- mode: Python;-*-
      from couchbase import Couchbase
      import couchbase
      cb = Couchbase.connect(bucket='default', host='10.111.83.101')
      cb.add('Doc-1', 'test')
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              trond Trond Norbye
              pvarley Patrick Varley
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty