MB-17815: Don't increment counters for EWOULDBLOCK

When the underlying engine returns EWOULDBLOCK (happens during full
eviction) the executor should not increment the operation counter
since that would cause the operation to be counted twice.

Change-Id: Id48510d41c6cfe0877e6e844df5db7d4dcc862f9
Reviewed-on: http://review.couchbase.org/59445
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>